--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
+    <meta name="description" content="使用React、Redux、Immutable制作的贪吃蛇" />
+    <meta name="keywords" content="贪吃蛇, Snake,React,Redux,Immuatble,JavaScript">
+    <meta name="format-detection" content="telephone=no"/>
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
@@ -39,3 +42,4 @@
     -->
   </body>
 </html>
+
