update title of website

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
-    <meta name="description" content="使用React、Redux、Immutable制作的贪吃蛇" />
+    <meta name="description" content="Use React、Redux、Immutable to make the snake game" />
     <meta name="keywords" content="贪吃蛇, Snake,React,Redux,Immuatble,JavaScript">
     <meta name="format-detection" content="telephone=no"/>
     <!--
@@ -23,7 +23,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Snake</title>
   </head>
   <body>
     <noscript>
